# leetcode-tracker

./: .gitignore  LICENSE  README.md  desktop_entry.py  package-lock.json  package.json  pyproject.toml
.githooks/: prepare-commit-msg
docs/: COACH_LANGGRAPH.md  DATA_MODEL.md  SUBMISSION_CAPTURE_INCIDENT.md
extension/: background.js  content.js  inject.js  manifest.json  popup.html  popup.js
leetcode_tracker/: __init__.py  __main__.py  app.py  autostart.py  cli.py  coach_deps.py  config.py  db.py  kg_cli.py  migrate_tz.py  paths.py  problem_stats.py  report.py  server.py  stats.py  store.py  submissions.py  timeutil.py
leetcode_tracker/api/: __init__.py  app.py  routes_coach.py  routes_core.py  routes_ops.py  routes_pages.py  routes_stats.py
leetcode_tracker/coach/: __init__.py  context.py  debug_log.py  deps.py  guardrail.py  hint.py  opening.py  prompts.py  service.py  sessions.py
leetcode_tracker/core/: __init__.py  problem_stats.py  report.py  stats.py  store.py  submissions.py
leetcode_tracker/data/algorithm_stone/: README.txt
leetcode_tracker/infra/: __init__.py  autostart.py  config.py  db.py  migrate_tz.py  paths.py
leetcode_tracker/kg/: __init__.py  import_maps.py  parser.py  queries.py
leetcode_tracker/llm/: __init__.py  provider.py
leetcode_tracker/static/: coach.html  index.html  ops.html  problem.html
openspec/: config.yaml
openspec/changes/archive/2026-07-15-mvp-implementation/: design.md  proposal.md  tasks.md
openspec/changes/mvp-1-01/: design.md  proposal.md  tasks.md
openspec/changes/mvp-implementation/: design.md  proposal.md  tasks.md
openspec/changes/v0-3-0-coach-kg/: design.md  proposal.md  tasks.md
openspec/specs/daily-report/: spec.md
openspec/specs/progress-stats/: spec.md
openspec/specs/submission-capture/: spec.md
scripts/: package_macos.sh  selftest_capture.mjs
tests/: test_coach_workflow.py  test_ops.py  test_timeutil.py
(+16 files in other folders)
