[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "leetcode-tracker"
version = "0.1.1"
description = "Fully local LeetCode CN practice tracker"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
app = ["pywebview>=5.0"]
packaging = ["pyinstaller>=6.0", "pywebview>=5.0"]

[project.scripts]
leetcode-tracker = "leetcode_tracker.cli:main"

[tool.setuptools.packages.find]
include = ["leetcode_tracker*"]

[tool.setuptools.package-data]
leetcode_tracker = ["static/*"]
