[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "leetcode-tracker"
version = "0.3.3"
description = "Fully local LeetCode CN practice tracker with optional AI coach"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
coach = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "langchain-openai>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
]
packaging = ["pyinstaller>=6.0", "fastapi>=0.115", "uvicorn[standard]>=0.30"]

[project.scripts]
leetcode-tracker = "leetcode_tracker.cli:main"

[tool.setuptools.packages.find]
include = ["leetcode_tracker*"]

[tool.setuptools.package-data]
leetcode_tracker = ["static/*", "data/algorithm_stone/**/*"]
